# job-tracker

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.override.yml  compose.yml  pyproject.toml  run_bot.py  run_observer.py  run_scrapper.py  settings.toml
alembic/: env.py
alembic/versions/: 2026_02_13_0537-38045ae32b61_added_vacancy_table.py
scripts/: prestart.sh
src/conf/: classes.py  instance.py
src/core/: utils.py
src/core/conf/: __init__.py  classes.py  logging.py  mq_topology.py
src/core/database/: __init__.py  base.py  db_manage.py  mixins.py  types.py
src/core/rabbitmq/: __init__.py  base_client.py  exceptions.py
src/services/observer/: __init__.py  entity.py  main.py  scheduler.py
src/services/observer/loaders/: __init__.py  base.py  head_hunter_loader.py  playwright.py
src/services/observer/messaging/: base.py  rabbitmq.py
src/services/observer/models/: __init__.py
src/services/observer/repositories/: __init__.py  base.py  vacancy.py
src/services/observer/tasks/: base_task.py  polling_task.py
src/services/scrapper/: entity.py  exceptions.py  main.py  scheduler.py
src/services/scrapper/_loaders/: base.py  head_hunter_loader.py
src/services/scrapper/ai_analyst/: __init__.py  analyst.py
src/services/scrapper/loader/: __init__.py  base.py  httpx_loader.py
src/services/scrapper/messaging/: __init__.py  base.py  rabbitmq.py
src/services/scrapper/models/: vacancy.py
src/services/scrapper/parsing/: __init__.py  _hh_parsing.py  base.py  bs_utils.py  hh_parsing.py
src/services/scrapper/repositories/: vacancy.py
src/services/scrapper/tasks/: __init__.py  base_task.py  make.py  polling_task.py
src/services/tg_bot/: bot.py  consumer.py  entity.py  handlers.py
