
[project]
name = "job-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true
python_version = "3.14"
exclude = [".venv"]

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
src = ["."]
target-version = "py314"
line-length = 79
preview = true
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors - ошибки стиля кода (PEP 8)
    "W",        # pycodestyle warnings - предупреждения стиля кода (PEP 8)
    "F",        # Pyflakes - статический анализ (неопределённые переменные, импорты)
    "I",        # isort - сортировка и организация импортов
    "B",        # flake8-bugbear - поиск потенциальных багов и плохих практик
    "C4",       # flake8-comprehensions - оптимизирует list/dict/set comprehensions
    "T20",      # flake8-print - предупреждает о print/debug print в коде
    "SIM",      # flake8-simplify - предлагает упрощение кода (if/else, loops)
    "RUF",      # Ruff-specific: Специфичные правила Ruff
    "Q",        # flake8-quotes - проверяет согласованность кавычек
    "UP",       # pyupgrade: Предлагает обновление синтаксиса
    "ARG",      # flake8-unused-arguments: Находит неиспользуемые аргументы
    "D",        # pydocstyle: Проверяет стиль docstring
    "A",        # flake8-builtins - предупреждает об использовании встроенных имён
    "N",        # pep8-naming - проверяет соглашения об именовании (CamelCase классов)
    "C90",      # mccabe: Проверяет сложность кода
    "TC",       # flake8-type-checking: Проверяет импорты для type checking
    "PTH",      # flake8-use-pathlib: Рекомендует pathlib вместо os.path
    "ANN",      # flake8-annotations: Требует аннотации типов
    "PLE",      # Pylint errors: Ошибки от Pylint
    "PLW",      # Pylint warnings: Предупреждения от Pylint
    "FAST",     # FastAPI: Проверяет правильное использование FastAPI
    "ASYNC",    # flake8-async: Проверяет асинхронный код
]
ignore = [
    "RUF002",   # Docstring contains ambiguous cirilic symbols
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
