
[project]
name = "job-tracker"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentry-sdk>=2.56.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
run_scrapper = "run_scrapper:main"
run_bot = "run_bot:main"

[tool.ruff]
src = ["."]
target-version = "py314"
line-length = 79
preview = true
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors - PEP 8 style errors
    "W",        # pycodestyle warnings - PEP 8 style warnings
    "F",        # Pyflakes - static analysis (undefined variables, imports)
    "I",        # isort - import sorting and organization
    "B",        # flake8-bugbear - potential bugs and bad practices
    "C4",       # flake8-comprehensions - optimize list/dict/set comprehensions
    "T20",      # flake8-print - warns about print/debug statements in code
    "SIM",      # flake8-simplify - suggests code simplifications (if/else, loops)
    "RUF",      # Ruff-specific rules
    "Q",        # flake8-quotes - checks quote consistency
    "UP",       # pyupgrade - suggests syntax updates for modern Python
    "ARG",      # flake8-unused-arguments - finds unused function arguments
    "D",        # pydocstyle - checks docstring style
    "A",        # flake8-builtins - warns about using built-in names
    "N",        # pep8-naming - checks naming conventions (CamelCase for classes)
    "C90",      # mccabe - checks code complexity
    "PTH",      # flake8-use-pathlib - recommends pathlib over os.path
    "PLE",      # Pylint errors
    "PLW",      # Pylint warnings
    "FAST",     # FastAPI - checks proper FastAPI usage
    "ASYNC",    # flake8-async - checks async code
    "TID",      # flake8-tidy-imports - helps with import structure
    "TCH",      # flake8-type-checking - separates type imports (speeds up startup)
    "DTZ",      # flake8-datetimez - forbids datetime without timezone (critical for DB)
    "ISC",      # flake8-implicit-str-concat - implicit string concat errors
    "BLE",      # flake8-blind-except - forbids bare 'except:'
    "S",        # Bandit - security checks
    "LOG",      # flake8-logging - proper logging practices
    "PERF",     # Perflint - performance checks
    "ERA",      # Eradicate - removes commented-out code
    "ANN",      # flake8-annotations - checks type annotations
]
ignore = [
    "RUF002",   # Docstring contains ambiguous cirilic symbols
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "S101",     # Allow asserts for pytest
    "ISC001",   # Conflict with formatter
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase"]


[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.per-file-ignores]
"src/services/scrapper/models/*.py" = ["TCH001", "TCH002"]
"src/core/database/*.py" = ["TCH001", "TCH002", "N805"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72 # Отдельный лимит для docstrings согласно PEP8

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.mypy]
python_version = "3.14"
strict = true

# --- Files and Scopes ---
mypy_path = "src"
files = ["."]
exclude = [".venv", "alembic"]
ignore_missing_imports = true    # Prevent errors from third-party libraries that don't provide type hints

plugins = [
    "pydantic.mypy",             # Validates Pydantic models and their types
    "sqlalchemy.ext.mypy.plugin" # Handles SQLAlchemy 2.0 Mapped types and relationships
]

# --- Output and Readability ---
pretty = true                   # Pretty-print output
show_error_codes = true         # Show specific error codes (e.g., [attr-defined]) for easy ignoring

# --- Strictness and Security ---
disallow_untyped_calls = true   # Error when calling a function without type annotations
disallow_untyped_defs = true    # Require type annotations for all function definitions
disallow_incomplete_defs = true # Error if a function has partial type annotations (missing some args or return)
check_untyped_defs = true       # Check the body of functions even if they don't have annotations

# --- Code Quality Warnings ---
warn_redundant_casts = true     # Warn if a type cast (cast()) is not actually needed
warn_unused_ignores = true      # Warn about unnecessary "# type: ignore" comments
warn_no_return = true           # Warn about functions that don't explicitly return
warn_unreachable = true         # Warn about code that will never be executed

[tool.pydantic-mypy]
init_forbid_extra = true                # Error if extra arguments are passed to model __init__
init_typed = true                       # Error if init() is not type annotated
warn_required_dynamic_aliases = false   # Warn if fields use dynamic aliases that might break type checking
warn_untyped_fields = true              # Warn if fields are not explicitly typed

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
#    "aio_pika.*",
#    "pamqp.*",
    ]
ignore_missing_imports = true